--- a/spec/Cargo.toml
+++ b/spec/Cargo.toml
@@ -3,7 +3,8 @@ name = "smol-utils"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = [ "dsf-iot/std" ]
 
 [dependencies]
 anyhow = "1.0.44"
@@ -13,8 +14,28 @@ serde_json = "1.0.68"
 structopt = "0.3.23"
 strum = "0.21.0"
 strum_macros = "0.21.1"
+async-std = { version = "1.4.0", features = ["attributes"] }
+log = "0.4.14"
+
+[dependencies.dsf-iot]
+path = "../../dsf-workspace/dsf-iot"
+default_features = false
+
+[dependencies.dsf-core]
+path = "../../dsf-workspace/dsf-core"
+default_features = false
 
 
 [[bin]]
 name = "cbor-util"
 path = "src/cbor_util.rs"
+
+[[bin]]
+name = "dsf-util"
+path = "src/dsf_util.rs"
+
+
+[patch.crates-io]
+dsf-core = { path = "../../dsf-workspace/dsf-core" }
+dsf-rpc = { path = "../../dsf-workspace/dsf-rpc" }
+dsf-client = { path = "../../dsf-workspace/dsf-client" }
