--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -14,12 +14,13 @@ toml = "0.5.6"
 simplelog = "0.8.0"
 structopt = "0.3.16"
 async-trait = "0.1.38"
-log = "0.4.11"
+
+log = { version = "0.4.11", features = [ "release_max_level_trace" ] }
 
 humantime = "2.0.1"
 humantime-serde = "1.0.0"
 async-timer = "0.7.4"
-bollard = "0.9.1"
+bollard = "0.11.1"
 bincode = "1.3.1"
 clap = "2.33.3"
 rolling-stats = "0.4.0"
@@ -43,10 +44,10 @@ serde_cbor = "0.11.1"
 [dependencies.dsf-core]
 version = "0.2.0"
 features = [ "serde" ]
-path = "../dsf-workspace/dsf-core"
+path = "../../dsf-workspace/dsf-core"
 
 [dependencies.dsf-iot]
-path = "../dsf-iot"
+path = "../../dsf-workspace/dsf-iot"
 
 
 [dependencies.tokio]
@@ -81,7 +82,10 @@ path = "src/bin/reduce.rs"
 bollard = { git = "https://github.com/fussybeaver/bollard.git", branch = "ND-disable-named-pipes" }
 
 #rolling-stats = { path = "../rust-rolling-stats" }
-dsf-core = { path = "../dsf-workspace/dsf-core" }
+dsf-core = { path = "../../dsf-workspace/dsf-core" }
+dsf-rpc = { path = "../../dsf-workspace/dsf-rpc" }
+dsf-client = { path = "../../dsf-workspace/dsf-client" }
+
 #coap-client = { path = "../coap-client" }
 #paho-mqtt = { path = "../rust-paho-mqtt" }
 
