--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -39,6 +39,7 @@ strum_macros = "0.20.1"
 strum = "0.20.0"
 cbor = "0.4.1"
 serde_cbor = "0.11.1"
+console-subscriber = "0.1.2"
 
 
 [dependencies.dsf-core]
@@ -51,11 +52,11 @@ path = "../../dsf-workspace/dsf-iot"
 
 
 [dependencies.tokio]
-version = "1.9.0"
+version = "1.16.1"
 features = [ "full", "macros" ]
 
 [dependencies.futures]
-version = "0.3.16"
+version = "0.3.21"
 features = ["compat"]
 
 
