--- a/perf/test.toml
+++ b/perf/test.toml
@@ -9,15 +9,15 @@ tls_key = ".certs/client.key"
 #clients = [ 10, 25, 50, 75, 100, 125, 150, 175, 200 ]
 #clients = [ 10, 50, 100, 150, 200 ]
 #frequency = [ 1, 2, 10 ]
-frequency = [ 1 ]
+frequency = [ 10 ]
 message_len = 32
 
 clients = [
-    { publishers = 10, subscribers = 10 },
-    { publishers = 50, subscribers = 50 },
-    { publishers = 100, subscribers = 100 },
-    { publishers = 150, subscribers = 150 },
-    { publishers = 200, subscribers = 200 },
+    #{ publishers = 10, subscribers = 10 },
+    { publishers = 10, subscribers = 50 },
+    { publishers = 10, subscribers = 100 },
+    { publishers = 10, subscribers = 150 },
+    { publishers = 10, subscribers = 200 },
 #    { publishers = 150, subscribers = 150 },
 #    { publishers = 200, subscribers = 200},
 ]
