--- a/spec/Cargo.toml
+++ b/spec/Cargo.toml
@@ -17,13 +17,10 @@ strum_macros = "0.21.1"
 async-std = { version = "1.4.0", features = ["attributes"] }
 log = "0.4.14"
 
-[dependencies.dsf-iot]
-path = "../../dsf-workspace/dsf-iot"
-default_features = false
-
-[dependencies.dsf-core]
-path = "../../dsf-workspace/dsf-core"
-default_features = false
+dsf-core = "0.3.0"
+dsf-rpc = "0.3.0"
+dsf-client = "0.3.0"
+dsf-iot = "0.1.0"
 
 
 [[bin]]
@@ -33,9 +30,3 @@ path = "src/cbor_util.rs"
 [[bin]]
 name = "dsf-util"
 path = "src/dsf_util.rs"
-
-
-[patch.crates-io]
-dsf-core = { path = "../../dsf-workspace/dsf-core" }
-dsf-rpc = { path = "../../dsf-workspace/dsf-rpc" }
-dsf-client = { path = "../../dsf-workspace/dsf-client" }
