--- a/disc/Cargo.toml
+++ b/disc/Cargo.toml
@@ -3,7 +3,7 @@ name = "disc"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+default-run = "disc-eval"
 
 [dependencies]
 
@@ -11,6 +11,7 @@ dsf-core = "0.3.0"
 dsf-client = "0.3.0"
 dsf-rpc = "0.3.0"
 dsf-iot = "0.1.0"
+kad = { git = "https://github.com/ryankurte/rust-kad.git", branch = "main" }
 
 anyhow = "1.0.71"
 clap = { version = "4.3.0", features = [ "derive", "env" ] }
@@ -23,3 +24,14 @@ humantime = "2.1.0"
 rolling-stats = { version = "0.7.0", features = [ "serde" ] }
 chrono = "0.4.24"
 futures = "*"
+
+sha2 = { version = "0.8.1", default_features = false }
+rand = "*"
+
+[[bin]]
+name = "disc-eval"
+path = "src/main.rs"
+
+[[bin]]
+name = "kad-eval"
+path = "src/kad.rs"
