improving perf eval, add k3s config for discovery tests

--- a/perf/test-minimal.toml
+++ b/perf/test-minimal.toml
@@ -11,7 +11,7 @@ frequency = [ 10 ]
 message_len = 32
 
 [[matrix.clients]]
-publishers = 200
+publishers = 10
 subscribers = 200
 
 
@@ -39,11 +39,12 @@ port = 5684
 
 [[drivers]]
 mode = "dsf"
-container = "ghcr.io/ryankurte/dsf-iot-eval/iot-perf-dsf"
-#container = "ghcr.io/dist-svc/dsf"
+#container = "ghcr.io/ryankurte/dsf-iot-eval/iot-perf-dsf"
+container = "ghcr.io/dist-svc/dsf"
 port = 10100
 env = [
-    "DSF_DB_FILE=/run/dsfd.db",
+#    "DSF_DB_FILE=/run/dsfd.db",
+    "DSF_DB_FILE=sqlite://:memory:?cache=shared",
     "DSF_SOCK=/var/dsfd.sock",
-#    "ASYNC_STD_THREAD_COUNT=1",
+    "LOG_LEVEL=warn",
 ]
