--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -41,20 +41,13 @@ cbor = "0.4.1"
 serde_cbor = "0.11.1"
 console-subscriber = "0.1.2"
 
+tokio = { version = "1.16.1", features = [ "full", "macros" ] }
+futures = { version = "0.3.21", features = ["compat"] }
 
 dsf-core = "0.3.0"
 dsf-rpc = "0.3.0"
 dsf-client = "0.3.0"
 dsf-iot = "0.1.0"
-
-
-[dependencies.tokio]
-version = "1.16.1"
-features = [ "full", "macros" ]
-
-[dependencies.futures]
-version = "0.3.21"
-features = ["compat"]
 
 
 [dependencies.futures_v1]
