--- a/disc/Cargo.toml
+++ b/disc/Cargo.toml
@@ -26,6 +26,7 @@ chrono = "0.4.24"
 futures = "*"
 async-trait = "*"
 windowed-futures = "0.1.0"
+csv = "*"
 
 sha2 = { version = "0.8.1", default_features = false }
 rand = "*"
